--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ platformdirs = "^2.5.1"
 valida = "^0.4.0"
 pytest = {version = "^7.2.0", optional = true}
 click = "^8.1.3"
+psutil = "^5.9.4"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
