--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ valida = "^0.4.0"
 pytest = {version = "^7.2.0", optional = true}
 click = "^8.1.3"
 psutil = "^5.9.4"
+watchdog = "^2.1.9"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
